--- a/index.ipynb
+++ b/index.ipynb
@@ -216,22 +216,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Ceo'"
+       "'CEO'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"Ceo\" # 'CEO'"
+    "\"Ceo\".upper() # 'CEO'"
    ]
   },
   {
@@ -249,7 +249,7 @@
    },
    "outputs": [],
    "source": [
-    "\"art.vandelay@vandelay.co\" # False"
+    "\"art.vandelay@vandelay.co\". # False"
    ]
   },
   {
